--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,13 @@
+---
+
 galaxy_info:
-author: Team Deadlock
-description: This is an ansible role for Nagios
-license: BSD
-platforms:
-- name: CentOs 7
-categories:
-- monitoring
+  author: Team Deadlock
+  description: This is an ansible role for Nagios
+  license: BSD
+  platforms:
+    - name: CentOs 7
+  categories:
+    - monitoring
+    - system
 
 dependencies: []
