--- a/ansible/roles/nagios/templates/printer.cfg
+++ b/ansible/roles/nagios/templates/printer.cfg
@@ -8,9 +8,6 @@
 #
 ###############################################################################
 
-#laat mij verschijnen op de linux
-
-
 
 ###############################################################################
 ###############################################################################
@@ -31,7 +28,17 @@ define host{
 	hostgroups	network-printers 	; Host groups this printer is associated with
 	}
 
-
+{% if nagios_printers is defined %}
+{% for printer in nagios_printers %}
+define host{
+   use {{ printer.use }}
+   host_name {{ printer.name }}
+   alias {{printer.alias }}
+   address {{ printer.address }}
+   hostgroups {{ printer.hostgroup }}
+}
+{% endfor %}
+{% endif %}
 
 
 ###############################################################################
@@ -84,3 +91,15 @@ define service{
 	normal_check_interval	10
 	retry_check_interval	1
         }
+
+{% if nagios_printerservices is defined %}
+{% for service in nagios_printerservices %}
+define service{
+   use {{ service.use }}
+   host_name {{ service.name }}
+   service_description {{service.service_description }}
+   normal_check_interval{{ service.normal_check_interval }}
+   retry_check_interval {{ service.retry_check_interval }}
+}
+{% endfor %}
+{% endif %}
