--- a/ansible/roles/nagios/templates/switch.cfg
+++ b/ansible/roles/nagios/templates/switch.cfg
@@ -28,6 +28,18 @@ define host{
 	address		192.168.1.253		; IP address of the switch
 	hostgroups	switches		; Host groups this switch is associated with
 	}
+    
+{% if nagios_switchs is defined %}
+{% for switch in nagios_switchs %}
+define host{
+   use {{ switch.use }}
+   host_name {{ switch.name }}
+   alias {{switch.alias }}
+   address {{ switch.address }}
+   hostgroups {{ switch.hostgroup }}
+}
+{% endfor %}
+{% endif %}
 
 
 
@@ -101,7 +113,16 @@ define service{
 	check_command		check_local_mrtgtraf!/var/lib/mrtg/192.168.1.253_1.log!AVG!1000000,1000000!5000000,5000000!10
 	}
 
-
+{% if nagios_routerservices is defined %}
+{% for service in nagios_routerservices %}
+define service{
+   use {{ service.use }}
+   host_name {{ service.name }}
+   service_description {{service.service_description }}
+   check_command {{ service.check_command }}
+}
+{% endfor %}
+{% endif %}
 
 
 
