--- a/ansible/roles/nagios/templates/windows.cfg
+++ b/ansible/roles/nagios/templates/windows.cfg
@@ -29,6 +29,16 @@ define host{
 	address		192.168.1.2	; IP address of the host
 	}
 
+{% if nagios_windows is defined %}
+{% for host in nagios_windows %}
+define host{
+   use {{ host.use }}
+   host_name {{ host.name }}
+   alias {{host.alias }}
+   address {{ host.address }}
+}
+{% endfor %}
+{% endif %}
 
 
 
@@ -143,3 +153,13 @@ define service{
 	check_command		check_nt!PROCSTATE!-d SHOWALL -l Explorer.exe
 	}
 
+{% if nagios_windowsservices is defined %}
+{% for service in nagios_windowsservices %}
+define service{
+   use {{ service.use }}
+   host_name {{ service.name }}
+   service_description {{service.service_description }}
+   check_command {{service.check_command}}
+}
+{% endfor %}
+{% endif %}
