--- a/ansible/roles/nagios/templates/cgi.cfg
+++ b/ansible/roles/nagios/templates/cgi.cfg
@@ -12,7 +12,7 @@
 # The CGIs will read the main and host config files for any other
 # data they might need.
 
-main_config_file=/etc/nagios/nagios.cfg
+main_config_file= {{ main_config_file_location }}
 
 
 
@@ -21,7 +21,7 @@ main_config_file=/etc/nagios/nagios.cfg
 # value is used to locate the logo images needed by the statusmap
 # and statuswrl CGIs.
 
-physical_html_path=/usr/share/nagios/html
+physical_html_path= {{ physical_html_path }}
 
 
 
@@ -33,7 +33,7 @@ physical_html_path=/usr/share/nagios/html
 # http://www.myhost.com/nagios, this value should be '/nagios'
 # (without the quotes).
 
-url_html_path=/nagios
+url_html_path= {{ url_html_path }}
 
 
 
@@ -43,7 +43,7 @@ url_html_path=/nagios
 # Values: 0 = disables context-sensitive help
 #         1 = enables context-sensitive help
 
-show_context_help=0
+show_context_help= {% if show_context_help == 'no' %} 0 {% elif show_context_help == 'yes' %} 1 {% endif %}
 
 
 
@@ -53,7 +53,7 @@ show_context_help=0
 # Values: 0 = leave hosts/services that have not been check yet in their original state
 #         1 = mark hosts/services that have not been checked yet as PENDING
 
-use_pending_states=1
+use_pending_states= {% if use_pending_states == 'no' %} 0 {% elif use_pending_states == 'yes' %} 1 {% endif %}
 
 
 
@@ -75,7 +75,7 @@ use_pending_states=1
 # authentication (bad idea), while any other value will make them
 # use the authentication functions (the default).
 
-use_authentication=1
+use_authentication={% if use_authentication == 'no' %} 0 {% elif use_authentication == 'yes' %} 1 {% endif %}
 
 
 
@@ -85,7 +85,7 @@ use_authentication=1
 # authentication in the CGIs.  This is an advanced option and should
 # not be enabled unless you know what you're doing.
 
-use_ssl_authentication=0
+use_ssl_authentication={% if use_ssl_authentication == 'no' %} 0 {% elif use_ssl_authentication == 'yes' %} 1 {% endif %}
 
 
 
@@ -103,8 +103,8 @@ use_ssl_authentication=0
 # access to the CGIs has been authenticated in some manner!  If you
 # define this variable, anyone who has not authenticated to the web
 # server will inherit all rights you assign to this user!
- 
-#default_user_name=guest
+
+#default_user_name= {{ default_user_name }}
 
 
 
@@ -116,7 +116,7 @@ use_ssl_authentication=0
 # not use authorization.  You may use an asterisk (*) to
 # authorize any user who has authenticated to the web server.
 
-authorized_for_system_information=nagiosadmin
+authorized_for_system_information=nagiosadmin,{% for user in nagios_users %}{{user.name}}{% if not loop.last %},{% endif %}{% endfor %}
 
 
 
@@ -128,7 +128,7 @@ authorized_for_system_information=nagiosadmin
 # an asterisk (*) to authorize any user who has authenticated
 # to the web server.
 
-authorized_for_configuration_information=nagiosadmin
+authorized_for_configuration_information=nagiosadmin,{% for user in nagios_users %}{{user.name}}{% if not loop.last %},{% endif %}{% endfor %}
 
 
 
@@ -141,7 +141,7 @@ authorized_for_configuration_information=nagiosadmin
 # You may use an asterisk (*) to authorize any user who has
 # authenticated to the web server.
 
-authorized_for_system_commands=nagiosadmin
+authorized_for_system_commands=nagiosadmin,{% for user in nagios_users %}{{user.name}}{% if not loop.last %},{% endif %}{% endfor %}
 
 
 
@@ -154,8 +154,8 @@ authorized_for_system_commands=nagiosadmin
 # to authorize any user who has authenticated to the web server.
 
 
-authorized_for_all_services=nagiosadmin
-authorized_for_all_hosts=nagiosadmin
+authorized_for_all_services=nagiosadmin,{% for user in nagios_users %}{{user.name}}{% if not loop.last %},{% endif %}{% endfor %}
+authorized_for_all_hosts=nagiosadmin,{% for user in nagios_users %}{{user.name}}{% if not loop.last %},{% endif %}{% endfor %}
 
 
 
@@ -168,8 +168,8 @@ authorized_for_all_hosts=nagiosadmin
 # authorization).  You may use an asterisk (*) to authorize any
 # user who has authenticated to the web server.
 
-authorized_for_all_service_commands=nagiosadmin
-authorized_for_all_host_commands=nagiosadmin
+authorized_for_all_service_commands=nagiosadmin,{% for user in nagios_users %}{{user.name}}{% if not loop.last %},{% endif %}{% endfor %}
+authorized_for_all_host_commands=nagiosadmin,{% for user in nagios_users %}{{user.name}}{% if not loop.last %},{% endif %}{% endfor %}
 
 
 
@@ -179,7 +179,7 @@ authorized_for_all_host_commands=nagiosadmin
 # on the extinfo CGI pages.  It will also block comments from being shown
 # to read-only users.
 
-#authorized_for_read_only=user1,user2
+#authorized_for_read_only= {{ authorized_for_read_only }}
 
 
 
@@ -225,7 +225,7 @@ authorized_for_all_host_commands=nagiosadmin
 #       4 = Circular
 #       5 = Circular (Marked Up)
 
-default_statusmap_layout=5
+default_statusmap_layout= {{ default_statusmap_layout }}
 
 
 
@@ -239,7 +239,7 @@ default_statusmap_layout=5
 #       3 = Balanced tree
 #       4 = Circular
 
-default_statuswrl_layout=4
+default_statuswrl_layout= {{ default_statuswrl_layout }}
 
 
 
@@ -264,7 +264,7 @@ default_statuswrl_layout=4
 # OS and distribution, so you may have to tweak this to
 # work on your system.
 
-ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
+ping_syntax= {{ ping_syntax }}
 
 
 
@@ -272,7 +272,7 @@ ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
 # This option allows you to specify the refresh rate in seconds
 # of various CGIs (status, statusmap, extinfo, and outages).  
 
-refresh_rate=90
+refresh_rate= {{ refresh_rate }}
 
 # DEFAULT PAGE LIMIT
 # This option allows you to specify the default number of results 
@@ -280,7 +280,7 @@ refresh_rate=90
 # within the UI after the initial page load. Setting this to 0
 # will show all results.  
 
-result_limit=100
+result_limit= {{ result_limit }}
 
 
 # ESCAPE HTML TAGS
@@ -288,7 +288,7 @@ result_limit=100
 # status output is escaped in the web interface.  If enabled,
 # your plugin output will not be able to contain clickable links.
 
-escape_html_tags=1
+escape_html_tags= {% if escape_html_tags == 'no' %} 0 {% elif escape_html_tags == 'yes' %} 1 {% endif %}
 
 
 
@@ -336,7 +336,7 @@ notes_url_target=_blank
 # Values: 0 = allow editing author names
 #         1 = lock author names (disallow editing)
 
-lock_author_names=1
+lock_author_names= {% if lock_author_names == 'no' %} 0 {% elif lock_author_names == 'yes' %} 1 {% endif %}
 
 
 
