--- a/ansible/roles/nagios/templates/commands.cfg
+++ b/ansible/roles/nagios/templates/commands.cfg
@@ -236,5 +236,13 @@ define command{
 	command_name	process-service-perfdata
 	command_line	/usr/bin/printf "%b" "$LASTSERVICECHECK$\t$HOSTNAME$\t$SERVICEDESC$\t$SERVICESTATE$\t$SERVICEATTEMPT$\t$SERVICESTATETYPE$\t$SERVICEEXECUTIONTIME$\t$SERVICELATENCY$\t$SERVICEOUTPUT$\t$SERVICEPERFDATA$\n" >> /var/log/nagios/service-perfdata.out
 	}
-
+    
+{% if nagios_commands is defined %}
+{% for command in nagios_commands %}
+define command{
+   command_name {{ command.name }}
+   command_line {{ command.line }}
+}
+{% endfor %}
+{% endif %}
 
