--- a/ansible/roles/nagios/templates/contacts.cfg
+++ b/ansible/roles/nagios/templates/contacts.cfg
@@ -29,12 +29,21 @@
 
 define contact{
         contact_name                    nagiosadmin		; Short name of user
-	use				generic-contact		; Inherit default values from generic-contact template (defined above)
+        use				                generic-contact		; Inherit default values from generic-contact template (defined above)
         alias                           Nagios Admin		; Full name of user
-
         email                           nagios@localhost	; <<***** CHANGE THIS TO YOUR EMAIL ADDRESS ******
         }
 
+{% if nagios_contacts is defined %}
+{% for contact in nagios_contacts %}
+define contact{
+   contact_name {{ contact.name }}
+   use {{ contact.use }}
+   alias {{ contact.alias }}
+   email {{contact.email }}
+}
+{% endfor %}
+{% endif %}
 
 
 ###############################################################################
@@ -53,3 +62,13 @@ define contactgroup{
         alias                   Nagios Administrators
         members                 nagiosadmin
         }
+
+{% if nagios_contactgroups is defined %}
+{% for group in nagios_contactgroups %}
+define contactgroup{
+   contactgroup_name {{ group.name }}
+   alias {{ group.alias }}
+   members {{group.members }}
+}
+{% endfor %}
+{% endif %}
