--- a/ansible/roles/nagios/templates/localhost.cfg
+++ b/ansible/roles/nagios/templates/localhost.cfg
@@ -46,7 +46,7 @@ define host{
 define hostgroup{
         hostgroup_name  linux-servers ; The name of the hostgroup
         alias           Linux Servers ; Long name of the group
-        members         localhost     ; Comma separated list of hosts that belong to this group
+        members         localhost ; Comma separated list of hosts that belong to this group
         }
 
 
@@ -154,4 +154,16 @@ define service{
 	check_command			check_http
 	notifications_enabled		0
         }
+
+{% if nagios_localhostservices is defined %}
+{% for service in nagios_localhostservices %}
+define service{
+   use {{ service.use }}
+   host_name {{ service.host_name }}
+   service_description {{service.service_description }}
+   check_command {{ service.check_command }}
+   notifications_enabled {{ service.notifications_enabled }}
+}
+{% endfor %}
+{% endif %}
 
