--- a/ansible/roles/nagios/templates/nagios.cfg
+++ b/ansible/roles/nagios/templates/nagios.cfg
@@ -16,7 +16,7 @@
 # for historical purposes.  This should be the first option specified 
 # in the config file!!!
 
-log_file=/var/log/nagios/nagios.log
+log_file= {{ log_file_location }}
 
 
 
@@ -66,7 +66,7 @@ cfg_dir=/etc/nagios/conf.d
 # directly) in order to prevent inconsistencies that can occur
 # when the config files are modified after Nagios starts.
 
-object_cache_file=/var/log/nagios/objects.cache
+object_cache_file= {{ object_cache_file }}
 
 
 
@@ -82,7 +82,7 @@ object_cache_file=/var/log/nagios/objects.cache
 # Read the documentation section on optimizing Nagios to find our more
 # about how this feature works.
 
-precached_object_file=/var/log/nagios/objects.precache
+precached_object_file= {{ precached_object_file }}
 
 
 
@@ -95,7 +95,7 @@ precached_object_file=/var/log/nagios/objects.precache
 # defined as macros in this file and restrictive permissions (600)
 # can be placed on this file.
 
-resource_file=/etc/nagios/private/resource.cfg
+resource_file={{ resource_file }}
 
 
 
@@ -105,7 +105,7 @@ resource_file=/etc/nagios/private/resource.cfg
 # The contents of the status file are deleted every time Nagios
 #  restarts.
 
-status_file=/var/log/nagios/status.dat
+status_file= {{ status_file }}
 
 
 
@@ -114,7 +114,7 @@ status_file=/var/log/nagios/status.dat
 # Nagios will periodically dump program, host, and 
 # service status data.
 
-status_update_interval=10
+status_update_interval= {{ status_update_interval }}
 
 
 
@@ -122,7 +122,8 @@ status_update_interval=10
 # This determines the effective user that Nagios should run as.  
 # You can either supply a username or a UID.
 
-nagios_user=nagios
+nagios_user= {{ nagios_user }}
+
 
 
 
@@ -130,7 +131,7 @@ nagios_user=nagios
 # This determines the effective group that Nagios should run as.  
 # You can either supply a group name or a GID.
 
-nagios_group=nagios
+nagios_group= {{ nagios_group }}
 
 
 
@@ -142,7 +143,7 @@ nagios_group=nagios
 # you will have to enable this.
 # Values: 0 = disable commands, 1 = enable commands
 
-check_external_commands=1
+check_external_commands= {% if check_external_commands == 'no' %} 0 {% elif check_external_commands == 'yes' %} 1 {% endif %}
 
 
 
@@ -160,7 +161,7 @@ check_external_commands=1
 # command file as often as possible.
 
 #command_check_interval=15s
-command_check_interval=-1
+command_check_interval= {{ command_check_interval }}
 
 
 
@@ -274,7 +275,7 @@ log_archive_path=/var/log/nagios/archives
 # If you want messages logged to the syslog facility, as well as the
 # Nagios log file set this option to 1.  If not, set it to 0.
 
-use_syslog=1
+use_syslog= {{ use_syslog }}
 
 
 
@@ -282,7 +283,7 @@ use_syslog=1
 # If you don't want notifications to be logged, set this value to 0.
 # If notifications should be logged, set the value to 1.
 
-log_notifications=1
+log_notifications= {{ log_notifications }}
 
 
 
@@ -290,7 +291,7 @@ log_notifications=1
 # If you don't want service check retries to be logged, set this value
 # to 0.  If retries should be logged, set the value to 1.
 
-log_service_retries=1
+log_service_retries= {{ log_service_retries }}
 
 
 
@@ -298,7 +299,7 @@ log_service_retries=1
 # If you don't want host check retries to be logged, set this value to
 # 0.  If retries should be logged, set the value to 1.
 
-log_host_retries=1
+log_host_retries= {{ log_host_retries }}
 
 
 
@@ -307,7 +308,7 @@ log_host_retries=1
 # this value to 0.  If event handlers should be logged, set the value
 # to 1.
 
-log_event_handlers=1
+log_event_handlers= {{ log_event_handlers }}
 
 
 
@@ -319,7 +320,7 @@ log_event_handlers=1
 # statistics reporting, you do not need to enable this option.  In
 # this case, set the value to 0.
 
-log_initial_states=0
+log_initial_states= {{ log_initial_states }}
 
 
 
@@ -330,7 +331,7 @@ log_initial_states=0
 # checks - see the option below for controlling whether or not
 # passive checks are logged.
 
-log_external_commands=1
+log_external_commands= {{ log_external_commands }}
 
 
 
@@ -339,7 +340,7 @@ log_external_commands=1
 # this value to 0.  If passive checks should be logged, set
 # this value to 1.
 
-log_passive_checks=1
+log_passive_checks= {{ log_passive_checks }}
 
 
 
@@ -1228,8 +1229,8 @@ use_true_regexp_matching=0
 # using the $ADMINEMAIL$ and $ADMINPAGER$ macros in your notification
 # commands.
 
-admin_email=nagios@localhost
-admin_pager=pagenagios@localhost
+admin_email= {{ admin_email }}
+admin_pager= {{ admin_pager }}
 
 
 
